// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-chPdSV hjHHsu"
  >
    <table
      className="sc-kgoBCf kgbJXe"
    >
      <tbody
        className="sc-kpOJdX kAzjOl"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            US
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            PL
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Warsaw
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            DE
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Berlin
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            FR
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Paris
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            ES
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Madird
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            —
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-chPdSV hjHHsu"
  >
    <table
      className="sc-kgoBCf kgbJXe"
    >
      <thead
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <th
            className="sc-jKJlTe gYKkEd"
          >
            Code
          </th>
          <th
            className="sc-jKJlTe gYKkEd"
          >
            Capital
          </th>
          <th
            className="sc-jKJlTe gYKkEd"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kpOJdX kAzjOl"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            US
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            PL
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Warsaw
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            DE
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Berlin
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            FR
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Paris
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            ES
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Madird
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-ckVGcZ bWIamc"
          >
            —
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-chPdSV hjHHsu"
  >
    <table
      className="sc-kgoBCf kgbJXe"
    >
      <thead
        className="sc-kGXeez eIIwaK"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <th
            className="sc-jKJlTe gYKkEd"
          >
            #
          </th>
          <th
            className="sc-jKJlTe gYKkEd"
          >
            Code
          </th>
          <th
            className="sc-jKJlTe gYKkEd"
          >
            Capital
          </th>
          <th
            className="sc-jKJlTe gYKkEd"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-kpOJdX kAzjOl"
      >
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ iyfElG"
          >
            1
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            US
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ iyfElG"
          >
            2
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            PL
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Warsaw
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ iyfElG"
          >
            3
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            DE
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Berlin
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ iyfElG"
          >
            4
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            FR
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Paris
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ iyfElG"
          >
            5
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            ES
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Madird
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-dxgOiQ bEuaIT"
        >
          <td
            className="sc-eNQAEJ iyfElG"
          >
            6
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            —
          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-ckVGcZ bWIamc"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
